@@ -1,6 +1,10 @@
+2009-01-25  Stéphane Raimbault  <stephane.raimbault@gmail.com>
+
+	* vertimus/models.py: Removed useless try/except.
+
 2009-01-24  Stéphane Raimbault  <stephane.raimbault@gmail.com>
 
-	* vertimus/models.py: Fixes bug #568777
+	* vertimus/models.py: Fixes bug #568777.
 	* vertimus/tests/__init__.py: Added unit tests for this bug.
 
 2009-01-24  Claude Paroz  <claude@2xlibre.net>
